<resources>
    <string name="app_name">Playlist Maker</string>
<!--    Для view activity-->
    <string name="play_list_make">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="empty_media_library">Ваша медиатека пуста</string>
    <string name="update">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_search">Очистить историю</string>
    <string name="default_play_time">00:00</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="user_did_not_create_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
<!--    Для настроек-->
    <string name="url_for_share">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="theme_for_email_to_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="start_message_for_email_to_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_address">davydovaksenia529@yandex.com</string>
    <string name="url_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="send_intent_type">text/plan</string>
    <string name="send_intent_chooser">Поделиться через</string>
    <string name="write_intent_data">mailto:</string>
<!--    Для треков-->
    <string name="default_track_name">Неизвестный трек</string>
    <string name="default_artist_name">Неизвестные исполнитель</string>
    <string name="default_time">0:00</string>
    <string name="empty_search">Ничего не нашлось</string>
    <string name="connect_error">Проблемы со связью</string>
    <string name="extra_connect_error">Загрузка не удалась. Проверьте подключение к интернету</string>

<!--    Для аудиоплеера-->
    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>

<!--    Для медиатеки-->
    <string name="features_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>

<!--    Для bottom bar-->
    <string name="search_screen">Поиск</string>
    <string name="media_library_screen">Медиатека</string>
    <string name="settings_screen">Настройки</string>

<!--    Для экрана создания плейлистов-->
    <string name="confirm_dialig_title">Завершить создание плейлиста?</string>
    <string name="confirm_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="neitral_button_text">Отмена</string>
    <string name="positive_button_text">Завершить</string>
    <string name="create_playlist_toast"> "Плейлист %1$s создан"</string>

    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>
</resources>