<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme = "@style/Base.Theme.PlaylistMaker"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    android:id="@+id/settings"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".settings.ui.activity.SettingsFragment">

    <TextView
        style ="@style/HeadText"
        android:layout_marginStart="@dimen/title_margin_start"
        android:layout_marginTop="@dimen/title_margin_top"
        android:text="@string/settings" />

    <LinearLayout
        android:id="@+id/switchContainer"
        style="@style/SettingsButton"
        android:foreground="@null"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        >
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:text="@string/dark_theme"
            android:layout_marginHorizontal="60dp"
            android:layout_gravity="start|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="6dp"
            app:useMaterialThemeColors="false"
            app:thumbTint="@color/switch_thumb_color"
            app:trackTint = "@color/switch_track_color"/>

    </LinearLayout>

    <LinearLayout
        style="@style/SettingsButton"
        android:id="@+id/share_button"
        >
        <TextView
            style ="@style/SettingsButtonText"
            android:text="@string/share_app"
            android:layout_weight="1"
            />

        <ImageView
            style = "@style/Icon"
            app:srcCompat = "@drawable/ic_share"
            android:layout_marginEnd="12dp"
            />

    </LinearLayout>

    <LinearLayout
        style="@style/SettingsButton"
        android:id="@+id/write_to_support_button"
        >
        <TextView
            style="@style/SettingsButtonText"
            android:text="@string/write_to_support"
            android:layout_weight="1"
            />

        <ImageView
            style="@style/Icon"
            app:srcCompat = "@drawable/ic_support"
            android:layout_marginEnd="12dp"
            />

    </LinearLayout>

    <LinearLayout
        style="@style/SettingsButton"
        android:id="@+id/user_agreement_button"
        android:gravity="center_vertical"
        >
        <TextView
            style ="@style/SettingsButtonText"
            android:text="@string/user_agreement"
            android:layout_weight="1"
            />

        <ImageView
            style="@style/Icon"
            app:srcCompat = "@drawable/ic_arrow2"
            android:layout_marginEnd="12dp"
            />

    </LinearLayout>
</LinearLayout>

