<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playlistFragment"
    tools:context=".player.ui.fragment.AudioPlayerFragment"
    android:theme="@style/Base.Theme.PlaylistMaker"
    android:background="?attr/colorPrimary">
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_arrow"
        app:tint="?attr/colorOnPrimary"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/screenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_playlist"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="22sp"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="500"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/backButton"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"/>

    <ImageView
        android:id="@+id/playlistImage"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:src="@drawable/ic_new_playlist"
        android:scaleType="center"

        android:background="@drawable/playlist_image_background"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screenName"
        android:layout_marginTop="26dp"/>
    
    <EditText
        android:id="@+id/playlistName"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="18dp"
        android:hint="@string/playlist_name"
        android:textColorHint="?attr/colorOnPrimary"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="16sp"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="400"

        android:background="@drawable/edit_text_background"

        app:layout_constraintStart_toStartOf="@id/playlistImage"
        app:layout_constraintTop_toBottomOf="@id/playlistImage"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/playlistDescription"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="18dp"
        android:hint="@string/playlist_description"
        android:textColorHint="?attr/colorOnPrimary"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="16sp"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="400"

        android:background="@drawable/edit_text_background"

        app:layout_constraintTop_toBottomOf="@id/playlistName"
        app:layout_constraintStart_toStartOf="@id/playlistImage"
        android:layout_marginTop="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        android:layout_width="312dp"
        android:layout_height="44dp"
        android:text="@string/create"
        android:background="@drawable/button_states"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:textAllCaps="false"
        android:enabled="false"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/playlistImage"
        android:layout_marginBottom="32dp" />
</androidx.constraintlayout.widget.ConstraintLayout>