<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="13dp"
    android:paddingEnd="12dp"
    android:gravity="center"
    android:theme="@style/Base.Theme.PlaylistMaker"
    android:background="?attr/colorPrimary">
    
    <ImageView
        android:id="@+id/track_icon"
        android:layout_width="@dimen/medium_icon_size"
        android:layout_height="@dimen/medium_icon_size" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="8dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/default_track_name"
            android:textSize="@dimen/small_text_size"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:textColor="?attr/colorOnPrimary"
            android:ellipsize="end"
            android:maxLines="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/default_artist_name"
            android:textSize="11sp"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:textColor="?attr/colorOnBackground"
                android:maxLines="1"
                android:ellipsize="end"
                android:maxWidth="173dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_dot"
                app:tint="?attr/colorOnBackground"/>

            <TextView
                android:id="@+id/track_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/default_time"
                android:textSize="11sp"
                android:fontFamily="@font/ys_display_regular"
                android:textFontWeight="400"
                android:textColor="?attr/colorOnBackground"/>
        </LinearLayout>
    </LinearLayout>
    
    <ImageView
        style="@style/Icon"
        app:srcCompat="@drawable/ic_arrow2"/>
</LinearLayout>