<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/blue"
    android:id="@+id/main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/play_list_make"
        android:textColor="@color/white"
        android:textSize="@dimen/standart_text_size"
        android:layout_marginStart="@dimen/title_margin_start"
        android:layout_marginTop="@dimen/title_margin_top"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="@dimen/big_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        >

        <LinearLayout
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_weight="3"
            android:background="@drawable/rounded_bg"
            android:foreground="?attr/selectableItemBackground"
            >


            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginEnd="@dimen/distance_after_icon"
                app:srcCompat="@drawable/light_mode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/black"
                android:textSize="@dimen/standart_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/media_library_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/rounded_bg"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="@dimen/small_margin"
            android:foreground="?attr/selectableItemBackground"
            >

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                app:srcCompat="@drawable/light_mode3"
                android:layout_marginEnd="@dimen/distance_after_icon"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/media_library"
                android:textSize="@dimen/standart_text_size"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/rounded_bg"
            android:layout_gravity="center"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackground"
            >

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                app:srcCompat="@drawable/light_mode2"
                android:layout_marginEnd="@dimen/distance_after_icon"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/settings"
                android:textSize="@dimen/standart_text_size"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>














