<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/Base.Theme.PlaylistMaker">

    <LinearLayout
        android:id="@+id/headContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_margin_top"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/title_margin_start"
            android:foreground="?attr/selectableItemBackground"
            android:theme="@style/Base.Theme.PlaylistMaker"
            app:srcCompat="@drawable/ic_arrow"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            style="@style/HeadText"
            android:layout_marginStart="24dp"
            android:text="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_input_container"
        style="@style/Theme.SearchBar"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_grey"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="14dp">

        <ImageView
            style="@style/Theme.SearchBar"
            android:layout_width="@dimen/small_margin"
            android:layout_height="@dimen/small_margin"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/ic_search" />

        <FrameLayout
            android:id="@+id/editTextContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/search_input"
                style="@style/Theme.SearchBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/ys_display_regular"
                android:gravity="center_vertical"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:includeFontPadding="false"
                android:inputType="text"
                android:lines="1"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:singleLine="true"
                android:textFontWeight="400"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/clear_button"
                style="@style/Theme.SearchBar"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="end|center_vertical"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_clear" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/search_history_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="8dp"
            android:text="@string/search_history"
            android:textSize="19sp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"
            android:textFontWeight="500"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_tracks_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        <Button
            android:id="@+id/clear_history_button"
            style="@style/SmallButton"
            android:layout_marginTop="24dp"
            android:layout_width="148dp"
            android:layout_height="36dp"
            android:text="@string/clear_search" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="148dp"
        android:indeterminateTint="@color/blue"
       android:visibility="gone"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracks_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <ImageView
        android:id="@+id/search_placeholder"
        android:layout_width="@dimen/big_icon_size"
        android:layout_height="@dimen/big_icon_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110dp" />

    <TextView
        android:id="@+id/placeholder_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="400"
        android:textSize="19sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/placeholder_extra_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="400"
        android:textSize="19sp"/>

    <Button
        android:id="@+id/update_button"
        style="@style/Button"
        android:layout_width="91dp"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:textColor="?attr/colorPrimary"
        android:textSize="14sp"
        app:cornerRadius="54dp"
        android:text="@string/update"
        android:letterSpacing="0"
        android:paddingRight="0dp"
        android:paddingLeft="0dp"/>
</LinearLayout>